--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:scss": "onchange 'css/*.scss' -- npm run scss",
     "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
-  
   },
   "author": "Jasmine",
   "license": "ISC",
@@ -24,6 +23,7 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "node-sass": "^7.0.0",
     "popper.js": "^1.16.1"
   }
 }
